--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="css/fonts.css" />
 <link rel="stylesheet" href="css/common.min.css" />
 <link rel="stylesheet" href="css/pages.min.css" />
-<script type="text/javascript" src="lib/require/build/require.js" data-main="js/main"></script>
+<script type="text/javascript" src="lib/require/build/require.js" data-main="js/build"></script>
 </head>
 <body>
     <!-- 头部导航 -->
