我的交易页面json数据显示完成

--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="css/fonts.css" />
 <link rel="stylesheet" href="css/common.min.css" />
 <link rel="stylesheet" href="css/pages.min.css" />
-<script type="text/javascript" src="lib/require/build/require.js" data-main="js/build"></script>
+<script type="text/javascript" src="lib/require/build/require.js" data-main="js/main"></script>
 </head>
 <body>
     <!-- 头部导航 -->
@@ -24,7 +24,6 @@
     <!-- /头部导航 -->
     <!-- 中间内容 --> 
     <ion-nav-view>
-
     </ion-nav-view>
     <!-- /中间内容 -->
 </body>
