--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
         <ion-nav-back-button class="button button-icon">
             <i class="ion-arrow-left-c"></i>
         </ion-nav-back-button>
-        <ion-nav-buttons side="right"><button class="button button-dark">返回游戏</button></ion-nav-buttons>
+        <ion-nav-buttons side="right"><a href="#/home" class="button button-dark">返回游戏</a></ion-nav-buttons>
     </ion-nav-bar> 
     <!-- /头部导航 -->
     <!-- 中间内容 --> 
